--- a/MyMaps/app/src/main/res/values/strings.xml
+++ b/MyMaps/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyMaps</string>
+    <string name="mapbox_acess_token">pk.eyJ1IjoiYXJpZmFpemluIiwiYSI6ImNrYTI2c3R1cjAwNXAzbm1zaDYyZW1ra2cifQ.okSWF0zf58rWkhoVuYjShQ</string>
 </resources>
